# vulnerable-python-flask

./: README.md  app.py  fetch_high_severity_alerts.py  pyproject.toml
.github/workflows/: code-scan.yml
