[tool.poetry]
name = "vulnerable-python-flask"
version = "0.1.0"
description = ""
authors = ["anant <anant.ti8@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"


[tool.poetry.group.dev.dependencies]
bandit = "^1.7.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
